---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/complex_select_part_7.sql
snapshot_kind: text
---
select
  sch.nspname as table_schema,
  tbl.relname as table_name,
  rep.view_schema,
  rep.view_name,
  pks_fks.conname as constraint_name,
  pks_fks.contype as constraint_type,
  jsonb_agg(
    jsonb_build_object(
      'table_column', col.attname,
      'view_columns', view_columns
    ) order by pks_fks.ord
  )
  as column_dependencies
from
  repeated_references as rep
  inner join
    pks_fks
  using (
    "resorigtbl",
    "resorigcol")
  inner join
    pg_class as tbl
  on tbl.oid = rep.resorigtbl
  inner join
    pg_attribute as col
  on col.attrelid = tbl.oid and
    col.attnum = rep.resorigcol
  inner join
    pg_namespace as sch
  on sch.oid = tbl.relnamespace
group by sch.nspname,
  tbl.relname,
  rep.view_schema,
  rep.view_name,
  pks_fks.conname,
  pks_fks.contype,
  pks_fks.ncol
having
  ncol =
  array_length(
    array_agg(
      row(col.attname, view_columns) order by pks_fks.ord
    ),
    1
  );
